--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
-<!DOCTYPE html><html lang="en"><head>
-    <script src="p5.js"></script>
-    <script src="p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8">
+<!DOCTYPE html>
+<html lang="en">
 
-  </head>
-  <body>
-    <script src="sketch.js"></script>
-    <script src="Ball.js"></script>
-    <!--<script src="racket.js"></script> -->
-  
+<head>
+	<script src="p5.js"></script>
+	<script src="p5.sound.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta charset="utf-8">
+</head>
 
-</body></html>
+<body>
+	<script src="sketch.js"></script>
+	<script src="Ball.js"></script>
+	<script src="PlayerRacket.js"></script>
+	<script src="OpponentRacket.js"></script>
+	<script src="p5.collide2d.min.js"></script>
+</body>
+
+</html>
