Implementação do placar.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 
 <body>
 	<script src="sketch.js"></script>
+	<script src="p5.collide2d.min.js"></script>
 	<script src="Ball.js"></script>
 	<script src="PlayerRacket.js"></script>
 	<script src="OpponentRacket.js"></script>
-	<script src="p5.collide2d.min.js"></script>
+	<script src="Scoreboard.js"></script>
 </body>
 
 </html>
