Almost finished, executed general adjustments but there are things to do yet.

--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-	<script src="p5.js"></script>
-	<script src="p5.sound.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<meta charset="utf-8">
-</head>
+	<head>
+		<script src="static/p5.min.js"></script>
+		<script src="static/p5.sound.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<meta charset="utf-8">
+	</head>
 
-<body>
-	<script src="sketch.js"></script>
-	<script src="p5.collide2d.min.js"></script>
-	<script src="Ball.js"></script>
-	<script src="PlayerRacket.js"></script>
-	<script src="OpponentRacket.js"></script>
-	<script src="Scoreboard.js"></script>
-</body>
+	<body>
+		<script src="sketch.js"></script>
+		<script src="static/p5.collide2d.min.js"></script>
+		<script src="domain/Ball.js"></script>
+		<script src="domain/PlayerRacket.js"></script>
+		<script src="domain/OpponentRacket.js"></script>
+		<script src="domain/Scoreboard.js"></script>
+	</body>
 
 </html>
